src/test/ui/imports/unused.stderr
error: unused import: `super::f`
  --> $DIR/unused.rs:7:24
   |
LL |         pub(super) use super::f;
   |                        ^^^^^^^^
   |
note: lint level defined here
  --> $DIR/unused.rs:1:9
   |
LL | #![deny(unused)]
   |         ^^^^^^
   = note: #[deny(unused_imports)] implied by #[deny(unused)]

error: aborting due to previous error

